the_project/webserver/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      volumes: # Define volume
        - name: shared-logs
          persistentVolumeClaim:
            claimName: log-storage-claim
      containers:
        - name: webserver
          image: webserver:230823
          imagePullPolicy: IfNotPresent
          volumeMounts: # Mount volume
            - name: shared-logs
              mountPath: /app/data
