the_project/webserver/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  type: ClusterIP
  selector:
    app: webserver # This is the app as declared in the deployment.
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3001
